2005-04-06	Istvan Varga	<istvan@csounds.com>
	* Engine/fgens.c:
	  use csound->Message() instead of printf()
	  added ENVIRON* pointer and variable arg list to fterror()
	  replaced use of deprecated FFT functions with csound->RealFFT()
	  limited line length to 80 characters
	* Engine/oload.c:
	* H/cs.h:
	* H/csoundCore.h:
	  removed deprecated functions from ENVIRON:
	    err_printf, IsPowerOfTwo, FFT2torlpacked, FFT2realpacked, cxmult,
	    csoundPrintf
	* H/fft.h, H/ugens9.h, OOps/disprep.c, OOps/dsputil.c, OOps/fft.c:
	* OOps/pvinterp.c, OOps/pvread.c, OOps/ugens8.c, OOps/ugens9.c:
	* OOps/vpvoc.c, Opcodes/oscbnk.c, SConstruct, Top/cvanal.c:
	* Top/pvanal.c:
	  removed deprecated FFT functions; use fftlib.c interface instead
	* H/prototyp.h:
	  declare err_printf and csoundPrintf here (deprecated functions)
	* InOut/widgets.cpp:
	  use csound->Message() instead of csound->Printf()
	* Top/csound.c:
	  deprecated functions: err_printf, csoundPrintf
	* Top/main.c:
	  do not call fftRESET() (this function was removed)
	  err_printf moved to Top/csound.c

2005-04-05	Istvan Varga	<istvan@csounds.com>
	* Engine/sread.c:
	* H/sort.h:
	  attempts to fix bugs in reading large score files
	* Engine/namedins.c, Engine/oload.c, H/csdl.h, H/cs.h, H/csoundCore.h:
	* H/namedins.h, H/OpcodeBase.hpp, H/prototyp.h, H/sftype.h, H/ugrw1.h:
	* OOps/ugens9.c, OOps/ugrw1.c, Opcodes/babo.h, Opcodes/biquad.h:
	* Opcodes/brass.h, Opcodes/dam.h:
	* Opcodes/fluidOpcodes/fluidOpcodes.cpp, Opcodes/Loris/lorisgens5.h:
	* Opcodes/pitch0.c, Opcodes/py/csoundmodule.c, Opcodes/spat3d.h:
	* Opcodes/vst4cs/src/vst4cs.h, Opcodes/vst4cs/src/vsthost.h:
	* Opcodes/wave-terrain.h:
	  minor header changes
	  removed some macros
	* H/csoundCore.h:
	* OOps/aops.c:
	  fixed crash in cpsoct() and similar functions on out of range arg

2005-04-03	Steven Yi		<stevenyi@gmail.com>
	* SConstruct: added arch and cpu commandline options to fine tune gcc3opt
	  flags for -march and -mcpu
